force-app/main/default/objects/Downloads__c/Downloads__c.object-meta.xml
<CustomObject>
    <label>Download</label>
    <nameField>
        <label>Downloads Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Downloads</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>