force-app/main/default/objects/Downloads__c/fields/Download_Country__c.field-meta.xml
<CustomField>
    <fullName>Download_Country__c</fullName>
    <label>Download Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Belgium-Flemish</fullName>
            </value>
            <value>
                <fullName>Belgium-French</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>France (teaching)</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Luxembourg-French</fullName>
            </value>
            <value>
                <fullName>Luxembourg-German</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Portugal</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>Switzerland-French</fullName>
            </value>
            <value>
                <fullName>Switzerland-German</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>