force-app/main/default/objects/Downloads__c/fields/Download_Current_Version_Link__c.field-meta.xml
<CustomField>
    <fullName>Download_Current_Version_Link__c</fullName>
    <formula>HYPERLINK( Link_Download_Current_Version__c , &quot;Click Here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Download Current Version Link</label>
    <type>Text</type>
</CustomField>