force-app/main/default/objects/Downloads__c/fields/Download_Type__c.field-meta.xml
<CustomField>
    <fullName>Download_Type__c</fullName>
    <label>Download Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Environments</fullName>
            </value>
            <value>
                <fullName>Getting Started</fullName>
            </value>
            <value>
                <fullName>Manufacturer Catalogue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Release videos</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>