force-app/main/default/objects/Downloads__c/fields/Last_Version_Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Version_Publish_Date__c</fullName>
    <label>Last Version Publish Date</label>
    <type>Date</type>
</CustomField>