force-app/main/default/objects/Downloads__c/fields/Link_Download_Current_Version__c.field-meta.xml
<CustomField>
    <fullName>Link_Download_Current_Version__c</fullName>
    <label>Link for Download Current Version</label>
    <type>Url</type>
</CustomField>