force-app/main/default/objects/Downloads__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner</label>
    <type>Checkbox</type>
</CustomField>