force-app/main/default/objects/Downloads__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Downloads</relationshipLabel>
    <relationshipName>Downloads</relationshipName>
    <type>Lookup</type>
</CustomField>