force-app/main/default/objects/Downloads__c/fields/Read_me_instructions__c.field-meta.xml
<CustomField>
    <fullName>Read_me_instructions__c</fullName>
    <label>Link for Read me / Instructions</label>
    <type>Url</type>
</CustomField>