force-app/main/default/objects/Downloads__c/fields/Read_me_Instructions_Link__c.field-meta.xml
<CustomField>
    <fullName>Read_me_Instructions_Link__c</fullName>
    <formula>HYPERLINK(  Read_me_instructions__c , &quot;Click Here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Read me / Instructions Link</label>
    <type>Text</type>
</CustomField>