force-app/main/default/objects/Downloads__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Download_Type__c</columns>
    <columns>Download_Country__c</columns>
    <columns>Download_Language__c</columns>
    <columns>Version_Number__c</columns>
    <columns>Download_Current_Version_Link__c</columns>
    <columns>Read_me_Instructions_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>