force-app/main/default/objects/Downloads__c/listViews/Caneco_BT_Downloads.listView-meta.xml
<ListView>
    <fullName>Caneco_BT_Downloads</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Download_Type__c</columns>
    <columns>Version_Number__c</columns>
    <columns>Download_Current_Version_Link__c</columns>
    <columns>Read_me_Instructions_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Caneco BT/ HT</value>
    </filters>
    <label>Caneco BT Downloads</label>
</ListView>